Use var declarations everywhere. (#404)
* Use var declarations everywhere.
Removing final for parameters and local variables (it is a question of taste)

* Removing commons dependency

* Adding new icon

---------

Co-authored-by: Björn Ekryd <bjornatekryd.se>