@@ -9,7 +9,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.nio.charset.Charset;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
@@ -28,8 +29,8 @@ class ViolationFileParameterTest {
   }
 
   @Test
-  final void violationFileCanBeOverwritten() throws Exception {
-    File tempFile = File.createTempFile("violation", ".xml", new File("target"));
+  void violationFileCanBeOverwritten() throws Exception {
+    var tempFile = File.createTempFile("violation", ".xml", new File("target"));
     SortPomImplUtil.create()
         .predefinedSortOrder("default_0_4_0")
         .violationFile(tempFile.getAbsolutePath())
@@ -41,11 +42,11 @@ class ViolationFileParameterTest {
   }
 
   @Test
-  final void readOnlyViolationFileShouldReportError() throws Exception {
-    File tempFile = File.createTempFile("violation", ".xml", new File("target"));
+  void readOnlyViolationFileShouldReportError() throws Exception {
+    var tempFile = File.createTempFile("violation", ".xml", new File("target"));
     assertTrue(tempFile.setReadOnly());
 
-    final Executable testMethod =
+    Executable testMethod =
         () ->
             SortPomImplUtil.create()
                 .violationFile(tempFile.getAbsolutePath())
@@ -55,7 +56,7 @@ class ViolationFileParameterTest {
                     "[INFO] The xml element <modelVersion> should be placed before <parent>",
                     true);
 
-    final FailureException thrown = assertThrows(FailureException.class, testMethod);
+    var thrown = assertThrows(FailureException.class, testMethod);
 
     assertThat(
         thrown.getMessage(),
@@ -63,7 +64,7 @@ class ViolationFileParameterTest {
   }
 
   @Test
-  final void violationFileShouldBeCreatedOnVerificationStop() {
+  void violationFileShouldBeCreatedOnVerificationStop() {
     SortPomImplUtil.create()
         .verifyFail("Stop")
         .violationFile(FILENAME_WITHOUT_DIRECTORIES)
@@ -72,12 +73,12 @@ class ViolationFileParameterTest {
             FailureException.class,
             "[ERROR] The xml element <modelVersion> should be placed before <parent>",
             true);
-    File file = new File(FILENAME_WITHOUT_DIRECTORIES);
+    var file = new File(FILENAME_WITHOUT_DIRECTORIES);
     assertThat(file.exists(), is(true));
   }
 
   @Test
-  final void violationFileWithParentDirectoryShouldBeCreatedOnVerificationWarn() throws Exception {
+  void violationFileWithParentDirectoryShouldBeCreatedOnVerificationWarn() throws Exception {
     SortPomImplUtil.create()
         .verifyFail("Warn")
         .violationFile(FILENAME_WITH_DIRECTORIES)
@@ -85,12 +86,12 @@ class ViolationFileParameterTest {
             "/full_unsorted_input.xml",
             "[WARNING] The xml element <modelVersion> should be placed before <parent>",
             true);
-    File file = new File(FILENAME_WITH_DIRECTORIES);
+    var file = new File(FILENAME_WITH_DIRECTORIES);
     assertThat(file.exists(), is(true));
   }
 
   @Test
-  final void violationFileContentShouldBeEncodedOnVerificationSort() throws Exception {
+  void violationFileContentShouldBeEncodedOnVerificationSort() throws Exception {
     SortPomImplUtil.create()
         .predefinedSortOrder("default_0_4_0")
         .verifyFail("Sort")
@@ -100,8 +101,7 @@ class ViolationFileParameterTest {
             "/full_expected.xml",
             "[INFO] The xml element <modelVersion> should be placed before <parent>",
             true);
-    String xml =
-        FileUtils.readFileToString(new File(FILENAME_WITH_DIRECTORIES), Charset.defaultCharset());
+    var xml = Files.readString(Paths.get(FILENAME_WITH_DIRECTORIES), Charset.defaultCharset());
     assertThat(
         xml,
         containsString(
